--- a/linuxcommands/processes-and-system.html
+++ b/linuxcommands/processes-and-system.html
@@ -283,7 +283,7 @@ pre {
 <h4>5. renice</h4>
 <p>Changes the priority of an already running process.</p>
 <pre><code>renice +10 -p 4567</code></pre>
-</div>
+</div><br>
 
 <span class="toggle-btn" onclick="toggle(this)">▼ Advanced</span>
 <div class="advanced">
