--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -280,20 +280,20 @@ pre {
 
 <aside class="sidebar">
 <div class="sidebar-header" onclick="togglePages()">
-    <h3>Basic GNU Coreutils</h3>
+    <h3>GNU Coreutils</h3>
     <span class="arrow">▼</span>
 </div>
 
 <div class="page-dropdown" id="pageDropdown">
-    <a href="introduction.html">INTRODUCTION</a>
+    <a href="introduction.html">Introduction</a>
     <a href="gnu-coreutils.html" class="active-page">1. GNU Coreutils</a>
     <a href="text-processing.html">2. Text Processing</a>
-    <a href="processes-and-system.html">3. Processes & System</a>
-    <a href="disk-hardware.html">4. Disk & Hardware</a>
+    <a href="processes-and-system.html">3. Processes and System</a>
+    <a href="disk-hardware.html">4. Disk and Hardware</a>
     <a href="networking.html">5. Networking</a>
     <a href="archives.html">6. Archives</a>
-    <a href="shell-and-env.html">7. Shell & Env</a>
-    <a href="users-and-sessions.html">8. Users & Sessions</a>
+    <a href="shell-and-env.html">7. Shell and Env</a>
+    <a href="users-and-sessions.html">8. Users and Sessions</a>
 </div>
 
 <ul>
