--- a/linuxcommands/networking.html
+++ b/linuxcommands/networking.html
@@ -158,15 +158,15 @@ pre {
 </div>
 
 <div class="page-dropdown" id="pageDropdown">
-    <a href="introduction.html">INTRODUCTION</a>
+    <a href="introduction.html">Introduction</a>
     <a href="gnu-coreutils.html">1. GNU Coreutils</a>
     <a href="text-processing.html">2. Text Processing</a>
-    <a href="processes-and-system.html">3. Processes & System</a>
-    <a href="disk-hardware.html">4. Disk & Hardware</a>
+    <a href="processes-and-system.html">3. Processes and System</a>
+    <a href="disk-hardware.html">4. Disk and Hardware</a>
     <a href="networking.html" class="active-page">5. Networking</a>
     <a href="archives.html">6. Archives</a>
-    <a href="shell-and-env.html">7. Shell & Env</a>
-    <a href="users-and-sessions.html">8. Users & Sessions</a>
+    <a href="shell-and-env.html">7. Shell and Env</a>
+    <a href="users-and-sessions.html">8. Users and Sessions</a>
 </div>
 
 <ul>
