--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -252,7 +252,7 @@ body {
     </div>
 
     <div class="page-dropdown" id="pageDropdown">
-        <a href="introduction.html" class="active-page">Intriduction</a>
+        <a href="introduction.html" class="active-page">Introduction</a>
         <a href="gnu-coreutils.html">1. GNU Coreutils</a>
         <a href="text-processing.html">2. Text Processing</a>
         <a href="processes-and-system.html">3. Processes and System</a>
