--- a/linuxcommands/shell-and-env.html
+++ b/linuxcommands/shell-and-env.html
@@ -170,16 +170,16 @@ pre {
 </div>
 
 <ul>
-    <li><a href="#variables">Variables</a></li>
+    <li><a href="#variables">Variables and Export</a></li>
     <li><a href="#environment">Environment</a></li>
-    <li><a href="#shortcuts">Shortcuts</a></li>
+    <li><a href="#shortcuts">Shortcuts and History</a></li>
 </ul>
 </aside>
 
 <main class="content">
 
 <section id="variables" class="section">
-<h2>Variables & Export</h2>
+<h2>Variables and Export</h2>
 
 <div class="command">
 <h4>1. export</h4>
@@ -252,7 +252,7 @@ echo $USER</code></pre>
 </section>
 
 <section id="shortcuts" class="section">
-<h2>Shell Shortcuts & History</h2>
+<h2>Shell Shortcuts and History</h2>
 
 <div class="command">
 <h4>1. history</h4>
