--- a/linuxcommands/text-processing.html
+++ b/linuxcommands/text-processing.html
@@ -258,7 +258,7 @@ pre {
 </div>
 
 <div class="page-dropdown" id="pageDropdown">
-    <a href="introduction.html">INTRODUCTION</a>
+    <a href="introduction.html">Introduction</a>
     <a href="gnu-coreutils.html">1. GNU Coreutils</a>
     <a href="text-processing.html" class="active-page">2. Text Processing</a>
     <a href="processes-and-system.html">3. Processes and System</a>
@@ -270,9 +270,9 @@ pre {
 </div>
 
 <ul>
-    <li><a href="#search">Searching</a></li>
-    <li><a href="#transform">Transforming</a></li>
-    <li><a href="#compare">Comparing</a></li>
+    <li><a href="#search">Searching Text</a></li>
+    <li><a href="#transform">Transforming Text</a></li>
+    <li><a href="#compare">Comparing nd Analyzing Text</a></li>
 </ul>
 
 </aside>
@@ -382,7 +382,7 @@ pre {
 </section>
 
 <section id="compare" class="section">
-<h2>Comparing & Analyzing Text</h2>
+<h2>Comparing and Analyzing Text</h2>
 
 <div class="command">
 <h4>1. diff</h4>
