--- a/linuxcommands/processes-and-system.html
+++ b/linuxcommands/processes-and-system.html
@@ -170,9 +170,9 @@ pre {
 </div>
 
 <ul>
-    <li><a href="#monitor">Monitoring</a></li>
-    <li><a href="#manage">Managing</a></li>
-    <li><a href="#system">System Info</a></li>
+    <li><a href="#monitor">Monitoring Processes</a></li>
+    <li><a href="#manage">Managing Processes</a></li>
+    <li><a href="#system">System Information</a></li>
 </ul>
 </aside>
 
