--- a/linuxcommands/networking.html
+++ b/linuxcommands/networking.html
@@ -170,9 +170,9 @@ pre {
 </div>
 
 <ul>
-    <li><a href="#connectivity">Connectivity</a></li>
-    <li><a href="#configuration">Configuration</a></li>
-    <li><a href="#dns">DNS & Lookup</a></li>
+    <li><a href="#connectivity">Connectivity Checking</a></li>
+    <li><a href="#configuration">Network Configuration</a></li>
+    <li><a href="#dns">DNS and Lookup</a></li>
     <li><a href="#transfer">Data Transfer</a></li>
 </ul>
 </aside>
@@ -180,7 +180,7 @@ pre {
 <main class="content">
 
 <section id="connectivity" class="section">
-<h2>Connectivity Check</h2>
+<h2>Connectivity Checking</h2>
 
 <div class="command">
 <h4>1. ping</h4>
@@ -273,7 +273,7 @@ pre {
 </section>
 
 <section id="dns" class="section">
-<h2>DNS & Lookup</h2>
+<h2>DNS and Lookup</h2>
 
 <div class="command">
 <h4>1. host</h4>
