--- a/linuxcommands/disk-hardware.html
+++ b/linuxcommands/disk-hardware.html
@@ -153,7 +153,7 @@ pre {
 
 <aside class="sidebar">
 <div class="sidebar-header" onclick="togglePages()">
-    <h3>Disk & Hardware</h3>
+    <h3>Disk and Hardware</h3>
     <span class="arrow">▼</span>
 </div>
 
@@ -170,16 +170,16 @@ pre {
 </div>
 
 <ul>
-    <li><a href="#disk">Disk Usage</a></li>
-    <li><a href="#partition">Partitions</a></li>
-    <li><a href="#hardware">Hardware Info</a></li>
+    <li><a href="#disk">Disk Usage and Filesystems</a></li>
+    <li><a href="#partition">Disk Partition Management</a></li>
+    <li><a href="#hardware">Hardware Information</a></li>
 </ul>
 </aside>
 
 <main class="content">
 
 <section id="disk" class="section">
-<h2>Disk Usage & Filesystems</h2>
+<h2>Disk Usage and Filesystems</h2>
 
 <div class="command">
 <h4>1. df</h4>
@@ -237,7 +237,7 @@ pre {
 </section>
 
 <section id="partition" class="section">
-<h2>Partition Management</h2>
+<h2>Disk Partition Management</h2>
 
 <div class="command">
 <h4>1. fdisk</h4>
@@ -278,7 +278,7 @@ pre {
 </section>
 
 <section id="hardware" class="section">
-<h2>Hardware Diagnostics</h2>
+<h2>Hardware Information</h2>
 
 <div class="command">
 <h4>1. lspci</h4>
