--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -300,7 +300,7 @@ pre {
     <li><a href="#file">File Operations</a></li>
     <li><a href="#dir">Directory Operations</a></li>
     <li><a href="#view">Viewing Files</a></li>
-    <li><a href="#perm">Permissions</a></li>
+    <li><a href="#perm">Permissions an Ownership</a></li>
 </ul>
 </aside>
 
@@ -467,7 +467,7 @@ ln -s target symlink</code></pre>
 </section>
 
 <section id="perm" class="section">
-<h2>Permissions & Ownership</h2>
+<h2>Permissions and Ownership</h2>
 
 <div class="command">
 <h4>1. chmod</h4>
