--- a/linuxcommands/archives.html
+++ b/linuxcommands/archives.html
@@ -170,9 +170,9 @@ pre {
 </div>
 
 <ul>
-    <li><a href="#bundling">Bundling</a></li>
-    <li><a href="#compression">Compression</a></li>
-    <li><a href="#zip">ZIP Formats</a></li>
+    <li><a href="#bundling">File Bundling</a></li>
+    <li><a href="#compression">Linux File Compression</a></li>
+    <li><a href="#zip">ZIP and 7-Zip Formats</a></li>
 </ul>
 </aside>
 
@@ -220,7 +220,7 @@ pre {
 </section>
 
 <section id="compression" class="section">
-<h2>Linux Compression</h2>
+<h2>Linux File Compression</h2>
 
 <div class="command">
 <h4>1. gzip / gunzip</h4>
@@ -270,7 +270,7 @@ unxz huge_file.db.xz</code></pre>
 </section>
 
 <section id="zip" class="section">
-<h2>ZIP & 7-Zip Formats</h2>
+<h2>ZIP and 7-Zip Formats</h2>
 
 <div class="command">
 <h4>1. zip</h4>
