--- a/linuxcommands/text-processing.html
+++ b/linuxcommands/text-processing.html
@@ -272,7 +272,7 @@ pre {
 <ul>
     <li><a href="#search">Searching Text</a></li>
     <li><a href="#transform">Transforming Text</a></li>
-    <li><a href="#compare">Comparing nd Analyzing Text</a></li>
+    <li><a href="#compare">Comparing and Analyzing Text</a></li>
 </ul>
 
 </aside>
