--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Linux Commands Guidebook | Riya halbhavi</title>
+<title>Linux Commands Guide | Riya halbhavi</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
@@ -241,7 +241,7 @@ body {
     </div>
 </div>
 
-<h2 class="page-title">Linux Commands Guidebook</h1>
+<h2 class="page-title">Linux Commands Guide</h1>
 
 <div class="layout">
 
@@ -265,7 +265,7 @@ body {
 
     <ul>
         <li><a href="#overview">Overview</a></li>
-        <li><a href="#guidebook">About the Guidebook</a></li>
+        <li><a href="#guide">About the Guide</a></li>
         <li><a href="#whylinux">Why Linux?</a></li>
         <li><a href="#topics">All Page Topics</a></li>
     </ul>
@@ -275,12 +275,12 @@ body {
 <section id="overview" class="section">
     <h2>Overview</h2>
     <img src="intro.png" alt="Linux Introduction">
-    <p>Welcome to the Linux Commands Guidebook! This guidebook helps users of all levels understand and use Linux commands efficiently. It provides structured guidance from basic operations to advanced system tasks.</p>
+    <p>Welcome to my Linux Commands Guide! This guidebook helps users of all levels understand and use Linux commands efficiently. It provides structured guidance from basic operations to advanced system tasks.</p>
 </section>
 
-<section id="guidebook" class="section">
-    <h2>About this Guidebook</h2>
-    <p>This guidebook is suitable for beginners, students, developers, and system administrators who want to improve their command-line skills. You can use it to:</p>
+<section id="guide" class="section">
+    <h2>About this Guide</h2>
+    <p>This guide is suitable for beginners, students, developers, and system administrators who want to improve their command-line skills. You can use it to:</p>
     <ul>
         <li>Learn Linux commands in a structured manner.</li>
         <li>Understand the purpose and usage of essential commands.</li>
