--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -274,7 +274,7 @@ pre {
     </div>
 </div>
 
-<h2 class="page-title">Linux Commands Guidebook</h1>
+<h2 class="page-title">Linux Commands Guide</h1>
 
 <div class="layout">
 
