--- a/linuxcommands/text-processing.html
+++ b/linuxcommands/text-processing.html
@@ -246,7 +246,7 @@ pre {
     </div>
 </div>
 
-<h2 class="page-title">Linux Commands Guidebook</h1>
+<h2 class="page-title">Linux Commands Guide</h1>
 
 <div class="layout">
 
