Change title from 'Guidebook' to 'Guide'

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!-- Linux Commands Guidebook Card -->
         <div class="repo-card">
             <a href="https://3riy.github.io/linuxcommands/introduction.html" target="_blank">
-                <h3>🐧 Linux Commands Guidebook</h3>
+                <h3>🐧 Linux Commands Guide</h3>
                 <img src="img/linuxcommands.png" class="repo-preview-img" alt="Linux commands">
                 <p>An ever-growing collection of Linux shell commands, organized by sub-topic, with examples and usage tips.</p>
             </a>
