--- a/index.html
+++ b/index.html
@@ -81,24 +81,18 @@
                 <div class="glitch-wrapper">
                     <div class="scanline">
                         <div class="glitch small-glitch" data-text="We are all bits in this world" aria-hidden="true">
-                            We are all bits in this world 🌱☄️
+                            Welcome to my main branch
                         </div>
                     </div>
                 </div>
-
                 <p>Hi there!</p><br>
                 <p>I'm interested in how software and hardware blend to create meaningful solutions.</p><br>
-<p>
-  A member of 
-  <a href="https://www.vre.pes.edu/" target="_blank" class="work-link">Vega Racing Electric</a> club
-</p><br>
-
-
-                <p>📍Somewhere between <span style="color: #fc7c7c;">reality</span> and a <span style="color: #fc7c7c;">joke gone too far</span></p><br>
+                <p>A member of <a href="https://www.vre.pes.edu/" target="_blank" class="work-link">Vega Racing Electric</a> club</p><br>
+                <p>📍Somewhere between <span style="color: #fc7c7c;">reality</span> and a <span style="color: #fc7c7c;">phantasm</span></p><br>
             </div>
 
             <div class="right-section">
-                <img src="styles/vvvv3.png" alt="abt" />
+                <img src="styles/vvv4.png" alt="abt" />
             </div>
         </div>
 
