Update glitch text in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="text-content">
                 <div class="glitch-wrapper">
                     <div class="scanline">
-                        <div class="glitch small-glitch" data-text="We are all bits in this world" aria-hidden="true">
+                        <div class="glitch small-glitch" data-text="Welcome to my main branch" aria-hidden="true">
                             Welcome to my main branch
                         </div>
                     </div>
