--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="right-section">
-                <img src="styles/vvv4.png" alt="abt" />
+                <img src="styles/vvv4.jpeg" alt="abt" />
             </div>
         </div>
 
