--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     height: 100%;
     pointer-events: none; /* allow clicks through it */
     
-    background: url('styles/sky1.png') center center / cover no-repeat;
+    background: url('styles/Sky1.png') center center / cover no-repeat;
 
     /* Extend fade at top and bottom for smoother transition */
     mask-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1) 25%, rgba(0,0,0,1) 75%, rgba(0,0,0,0));
