--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -232,8 +232,7 @@ body {
     <div class="menu">
         <a href="../index.html#about" class="menu-link">About</a><span style="color: red">|</span>
         <a href="../index.html#projects" class="menu-link">Projects</a><span style="color: red">|</span>
-        <a href="../index.html#learn" class="menu-link">Learn</a><span style="color: red">|</span>
-        <a href="../index.html#blog" class="menu-link active"><span style="color: #fc7c7c">Blog</span></a>
+        <a href="../index.html#learn"><span style="color: #fc7c7c">Learn</span></a><span style="color: red">|</span>
     </div>
       
     <div class="social-icons">
