--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -266,7 +266,7 @@ pre {
     <div class="menu">
         <a href="../index.html#about">About</a><span style="color: red">|</span>
         <a href="../index.html#projects">Projects</a><span style="color: red">|</span>
-        <a href="../index.html#learn"><span style="color: #fc7c7c">Learn</span></a><span style="color: red">|</span>
+        <a href="../index.html#learn"><span style="color: #fc7c7c">Learn</span></a>
     </div>
     <div class="social-icons">
         <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
