--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
                     </a>
                 </div>
 
-                <p>Real-time road incident and fire detection + SMS alert notification system developed using computer vision models, T5 string generation, and Twilio SMS API.</p>
+                <p>Real-time road incident and fire detection + SMS alert notification system developed using computer vision models, T5 string generation, and Twilio SMS API. Made in a team of 3 during a 24-hr hackathon at college.</p>
+                <p><b>Tools used:</b><br>
+                    <b>- Python (Language)</b><br>
+                    <b>- YOLO (ultralytics), numpy, matplotlib</b>: For object detection, numerical operations, and visual debugging.<br>
+                    <b>- T5 Transformer Model</b>: For incident classification and output report generation.<br>
+                    <b>- MongoDB</b>: For storing incident data.<br>
+                    <b>- Twilio SMS API</b>: For automatically sending SMS notifications to hard-coded emergency phone numbers.<br>
+                    <b>- Flask, gunicorn</b>: Web server for live output dashboard.
+                </p>
             </div>
 
             <div class="project-card">
@@ -101,6 +109,11 @@
                 </div>
 
                 <p>Crowd monitoring and cluster detection system developed using Python & OpenCV.</p>
+                <p><b>Tools used:</b><br>
+                    <b>- Python (Language)</b><br>
+                    <b>- numpy</b>: For creating N-dimensional arrays of images and performing array and matrix operations.<br>
+                    <b>- DBSCAN</b>: For density-based clustering and identifying points in low-density areas as noise or outliers.
+                </p>
             </div>
 
         </div>
@@ -112,10 +125,15 @@
                 <h3>Shadows On The Sands</h3>
 
                 <div class="project-links">
-                    <a href="https://rii2.itch.io/shadows-on-the-sands" target="_blank" class="project-btn">View on itch.io</a>
+                    <a href="https://3riy.itch.io/shadows-on-the-sands" target="_blank" class="project-btn">View on itch.io</a>
                 </div>
 
                 <p>Lore-based mystery narrative game set in a beachside restaurant.</p>
+                <p>Tools used:</p>
+                    <b>- Ren'Py (Engine)</b><br>
+                    <b>- Python</b>: For variable state flags.<br>
+                    <b>- Autodesk Sketchbook, GIMP, Canva</b>: For art and GUI assets.
+                </p>
             </div>
         </div>
         
