--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
 
                 <p>Lore-based mystery narrative game set in a beachside restaurant.</p>
-                <p>Tools used:</p>
+                <p><b>Tools used:</b><br>
                     <b>- Ren'Py (Engine)</b><br>
                     <b>- Python</b>: For variable state flags.<br>
                     <b>- Autodesk Sketchbook, GIMP, Canva</b>: For art and GUI assets.
