--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="repo-card">
             <a href="https://3riy.github.io/linuxcommands/introduction.html" target="_blank">
                 <h3>🐧 Linux Commands Guide</h3>
-                <img src="img/linux.png" class="repo-preview-img" alt="Linux commands">
+                <img src="img/linuxc.png" class="repo-preview-img" alt="Linux commands">
                 <p>An ever-growing collection of Linux shell commands, organized by sub-topic, with examples and usage tips.</p>
             </a>
         </div>
