--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -273,7 +273,7 @@ body {
 <main class="content">
 <section id="overview" class="section">
     <h2>Overview</h2>
-    <img src="intro.png" alt="Linux Introduction">
+    <img src="../img/linuxc.png" alt="Linux Introduction">
     <p>Welcome to my Linux Commands Guide! This guidebook helps users of all levels understand and use Linux commands efficiently. It provides structured guidance from basic operations to advanced system tasks.</p>
 </section>
 
