--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       
     <div class="social-icons">
         <a href="https://github.com/3riy" target="_blank" class="fab fa-github"></a>
+        <a href="https://www.linkedin.com/in/riya-halbhavi-424796390" target="_blank" class="fab fa-linkedin"></a>
     </div>
 </div>
     <br>
