--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -270,6 +270,7 @@ pre {
     </div>
     <div class="social-icons">
         <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
+        <a href="https://www.linkedin.com/in/riya-halbhavi-424796390" target="_blank" class="fab fa-linkedin"></a>
     </div>
 </div>
 
