--- a/linuxcommands/text-processing.html
+++ b/linuxcommands/text-processing.html
@@ -22,7 +22,6 @@ body {
     overflow-x: hidden;
 }
 
-/* ================= TOPBAR (FIXED SPACING) ================= */
 .topbar {
     position: fixed;
     top: 0;
@@ -39,7 +38,7 @@ body {
 .menu {
     display: flex;
     align-items: center;
-    gap: 8px; /* Precise gap control matching second code */
+    gap: 8px;
 }
 
 .menu a {
@@ -51,7 +50,6 @@ body {
 
 .menu a:hover { color: #fc7c7c; }
 
-/* TITLE */
 .page-title {
     margin-top: 85px;
     text-align: center;
@@ -60,14 +58,12 @@ body {
     letter-spacing: 2px;
 }
 
-/* LAYOUT */
 .layout {
     display: flex;
     padding: 40px 60px;
     gap: 40px;
 }
 
-/* SIDEBAR */
 .sidebar {
     position: fixed;
     top: 260px;
@@ -97,7 +93,6 @@ body {
     font-weight: bold;
 }
 
-/* CONTENT */
 .content {
     margin-left: 325px;
     flex: 1;
@@ -111,7 +106,6 @@ body {
     font-size: 45px;
 }
 
-/* COMMAND BLOCK */
 .command { margin: 20px 0; }
 .command h4 {
     font-family: 'Overpass Mono', monospace;
@@ -132,7 +126,6 @@ pre {
     font-size: 20px;
 }
 
-/* EXPAND */
 .toggle-btn {
     cursor: pointer;
     color: #fc7c7c;
@@ -144,7 +137,6 @@ pre {
     margin-top: 10px;
 }
 
-/* PAGE DROPDOWN */
 .sidebar-header {
     display: flex;
     align-items: center;
@@ -178,7 +170,6 @@ pre {
     font-weight: bold;
 }
 
-/* CURSOR */
 #cursor-trail-container2 {
     position: fixed;
     top: 0;
@@ -242,6 +233,7 @@ pre {
     </div>
     <div class="social-icons">
         <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
+        <a href="https://www.linkedin.com/in/riya-halbhavi-424796390" target="_blank" class="fab fa-linkedin"></a>
     </div>
 </div>
 
