--- a/linuxcommands/archives.html
+++ b/linuxcommands/archives.html
@@ -23,7 +23,6 @@ body {
     overflow-x: hidden;
 }
 
-/* ================= TOPBAR ================= */
 .topbar {
     position: fixed;
     top: 0;
@@ -40,7 +39,6 @@ body {
 .menu a { color: white; text-decoration: none; margin: 0; transition: color 0.2s ease; }
 .menu a:hover { color: #fc7c7c; }
 
-/* ================= PAGE TITLE ================= */
 .page-title {
     margin-top: 85px;
     text-align: center;
@@ -49,10 +47,8 @@ body {
     letter-spacing: 2px;
 }
 
-/* ================= LAYOUT ================= */
 .layout { display: flex; padding: 40px 60px; gap: 40px; }
 
-/* ================= SIDEBAR ================= */
 .sidebar {
     position: fixed;
     top: 260px;
@@ -68,12 +64,10 @@ body {
 .sidebar a:hover { color: #fc7c7c; }
 .sidebar a.active { color: #fc7c7c; font-weight: bold; }
 
-/* ================= CONTENT ================= */
 .content { margin-left: 325px; flex: 1; }
 .section { margin-bottom: 80px; scroll-margin-top: 140px; }
 .section h2 { color: #fc7c7c; font-family: 'Titillium Web', sans-serif; font-size: 45px; }
 
-/* ================= COMMAND BLOCK ================= */
 .command { margin: 20px 0; }
 .command h4 { font-family: 'Overpass Mono', monospace; color: #f5f5dc; font-size: 22px; }
 .command p { margin: 4px 0 6px; color: #ccc; font-size: 22px; }
@@ -86,11 +80,9 @@ pre {
     font-size: 20px;
 }
 
-/* ================= EXPAND ================= */
 .toggle-btn { cursor: pointer; color: #fc7c7c; font-family: 'Silkscreen', monospace; font-size: 22px; margin-top: 10px; display: inline-block;}
 .advanced { display: none; margin-top: 20px; border-top: 1px dashed #444; padding-top: 20px;}
 
-/* ================= PAGE DROPDOWN ================= */
 .sidebar-header { display: flex; align-items: center; justify-content: space-between; cursor: pointer; }
 .sidebar-header .arrow { color: white; font-size: 18px; transition: transform 0.2s ease; }
 .page-dropdown {
@@ -106,7 +98,6 @@ pre {
 .page-dropdown a:hover { background: #e5e5e5; }
 .page-dropdown a.active-page { background: #e5e5e5; font-weight: bold; }
 
-/* ================= CURSOR TRAIL ================= */
 #cursor-trail-container2 { position: fixed; top: 0; left: 0; pointer-events: none; z-index: 10000; }
 #static-cursor {
     position: fixed; width: 0; height: 0; border-left: 12px solid transparent; border-right: 12px solid transparent; border-bottom: 24px solid white;
@@ -142,7 +133,7 @@ pre {
         <a href="../index.html#learn"><span style="color: #fc7c7c">Learn</span></a>
     </div>
     <div class="social-icons">
-        <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
+        <a href="https://github.com/3riy" target="_blank" class="fab fa-github""></a>
         <a href="https://www.linkedin.com/in/riya-halbhavi-424796390" target="_blank" class="fab fa-linkedin"></a>
     </div>
 </div>
