--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -26,7 +26,6 @@ body {
     overflow-x: hidden;
 }
 
-/* ================= TOPBAR (FIXED SPACING) ================= */
 .topbar {
     position: fixed;
     top: 0;
@@ -45,7 +44,6 @@ body {
     align-items: center;
     gap: 8px; 
 }
-
 .menu a {
     color: white;
     text-decoration: none;
@@ -54,7 +52,6 @@ body {
 }
 .menu a:hover { color: #fc7c7c; }
 
-/* ================= PAGE TITLE ================= */
 .page-title {
     margin-top: 85px;
     text-align: center;
@@ -63,14 +60,12 @@ body {
     letter-spacing: 2px;
 }
 
-/* ================= LAYOUT ================= */
 .layout {
     display: flex;
     padding: 40px 60px;
     gap: 40px;
 }
 
-/* ================= SIDEBAR ================= */
 .sidebar {
     position: fixed;
     top: 260px;
@@ -104,7 +99,6 @@ body {
     font-weight: bold;
 }
 
-/* ================= CONTENT ================= */
 .content {
     margin-left: 325px;
     flex: 1;
@@ -119,7 +113,6 @@ body {
     font-size: 45px;
 }
 
-/* ================= COMMAND BLOCK ================= */
 .command {
     margin: 20px 0;
 }
@@ -142,7 +135,6 @@ pre {
     font-size: 20px;
 }
 
-/* ================= EXPAND ================= */
 .toggle-btn {
     cursor: pointer;
     color: #fc7c7c;
@@ -154,7 +146,6 @@ pre {
     margin-top: 10px;
 }
 
-/* ================= PAGE DROPDOWN ================= */
 .sidebar-header {
     display: flex;
     align-items: center;
@@ -196,7 +187,6 @@ pre {
     font-weight: bold;
 }
 
-/* ================= CURSOR TRAIL ================= */
 #cursor-trail-container2 {
     position: fixed;
     top: 0;
@@ -219,7 +209,6 @@ pre {
     left: -100px;
     transform: translate(-50%, -50%);
 }
-
 .trianglewhite5 {
     position: absolute;
     width: 0;
@@ -232,7 +221,6 @@ pre {
     transition: opacity 0.3s ease;
     transform: translate(-50%, -50%);
 }
-
 @keyframes pulse5 {
     0%, 100% { transform: translate(-50%, -50%) scale(1); }
     50% { transform: translate(-50%, -50%) scale(1.1); }
@@ -269,7 +257,7 @@ pre {
         <a href="../index.html#learn"><span style="color: #fc7c7c">Learn</span></a>
     </div>
     <div class="social-icons">
-        <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
+        <a href="https://github.com/3riy" target="_blank" class="fab fa-github""></a>
         <a href="https://www.linkedin.com/in/riya-halbhavi-424796390" target="_blank" class="fab fa-linkedin"></a>
     </div>
 </div>
