--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -200,7 +200,6 @@ body {
     font-weight: bold;
 }
 
-/* ================= MOBILE ================= */
 @media (max-width: 900px) {
     .sidebar { position: static; width: 100%; border-right: none; padding-right: 0; }
     .content { margin-left: 0; }
@@ -227,7 +226,7 @@ body {
     </div>
       
     <div class="social-icons">
-        <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
+        <a href="https://github.com/3riy" target="_blank" class="fab fa-github""></a>
         <a href="https://www.linkedin.com/in/riya-halbhavi-424796390" target="_blank" class="fab fa-linkedin"></a>
     </div>
 </div>
