--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
     <h1>Learn</h1>
 
     <div class="repo-grid">
-        <!-- Linux Commands Guidebook Card -->
         <div class="repo-card">
-            <a href="https://3riy.github.io/linuxcommands/introduction.html" target="_blank">
-                <h3>🐧 Linux Commands Guide</h3>
-                <img src="img/linuxc.png" class="repo-preview-img" alt="Linux commands">
-                <p>An ever-growing collection of Linux shell commands, organized by sub-topic, with examples and usage tips.</p>
+            <a href="https://medium.com/@3riy/list/motorcycle-tech-0dc11d11037f" target="_blank">
+                <h3>Motorcycle Tech Blog</h3></h3>
+                <img src="img/moto.png" class="repo-preview-img" alt="Motorcycle Tech Blog">
+                <p>Beginner-friendly articles on motorcycle and motorsport technology.<br>
+                Topics include racing terminologies, ECUs, sensors and actuators, control systems, telemetry, computer vision, IoT applications, and autonomous features.</p>
             </a>
         </div>
     </div>
