--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                 </div>
-                <p>Hi there!</p><br>
+                <p>Hello there!</p><br>
                 <p>I'm interested in how software and hardware blend to create meaningful solutions.</p><br>
                 <p>A member of <a href="https://www.vre.pes.edu/" target="_blank" class="work-link">Vega Racing Electric</a> club</p><br>
                 <p>📍Somewhere between <span style="color: #fc7c7c;">reality</span> and a <span style="color: #fc7c7c;">phantasm</span></p><br>
