--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="right-section">
-                <img src="styles/vvv4.jpeg" alt="abt" />
+                <img src="styles/v98.png" alt="abt" />
             </div>
         </div>
 
