Change blog title and update description
Updated blog title and description to reflect new focus on UGV and motorcycle technology.

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
     <div class="repo-grid">
         <div class="repo-card">
             <a href="https://medium.com/@3riy/list/motorcycle-tech-0dc11d11037f" target="_blank">
-                <h3>Motorcycle Tech Blog</h3></h3>
+                <h3>Tech Blog</h3></h3>
                 <img src="img/moto.png" class="repo-preview-img" alt="Motorcycle Tech Blog">
-                <p>Beginner-friendly articles on motorcycle and motorsport technology.<br>
-                Topics include racing terminologies, ECUs, sensors and actuators, control systems, telemetry, computer vision, IoT applications, and autonomous features.</p>
+                <p>Beginner-friendly articles on UGV and motorcycle technology.<br>
+                Topics include essentual terminologies, navigation and path planning, ECUs, sensors and actuators, control systems, computer vision, IoT applications, communication, and autonomous features.</p>
             </a>
         </div>
     </div>
