--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <a href="https://medium.com/@3riy/list/motorcycle-tech-0dc11d11037f" target="_blank">
                 <h3>Tech Blog</h3></h3>
                 <img src="img/moto.png" class="repo-preview-img" alt="Motorcycle Tech Blog">
-                <p>Beginner-friendly articles on UGV and motorcycle technology.<br>
-                Topics include essentual terminologies, navigation and path planning, ECUs, sensors and actuators, control systems, computer vision, IoT applications, communication, and autonomous features.</p>
+                <p>Beginner-friendly articles on UGV, UAV, and motorcycle technology.<br>
+                Topics include essential terminologies, navigation and path planning, ECUs, sensors and actuators, control systems, computer vision, IoT applications, communication, and autonomous features.</p>
             </a>
         </div>
     </div>
