Update image source for heatmap project

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
 
             <div class="project-card">
-                <img src="img/rrrrr.png" alt="Crowd and Cluster Detection/Heatmap System">
+                <img src="img/crowd_heatmap.png" alt="Crowd and Cluster Detection/Heatmap System">
                 <h3>Crowd and Cluster Detection + Heatmap System</h3>
 
                 <div class="project-links">
